--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           <div id="registerForm" class="home-container02">
             <div class="home-container03">
               <h1 class="home-text16 Heading">
-                Grab a free license key now.
+                Get a free license key now.
               </h1>
               <span class="home-text17 Content">
                 Yes it’s true! As we want to keep research open to everyone you
