--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <div class="home-container10">
               <h1 class="home-text25 Heading">Email sent successfully!</h1>
               <span class="home-text26">
-                  A confirmation email contaiting your perosnal license key has
+                  A confirmation email containing your perosnal license key has
                   been sent to:
               </span>
               <span id="userMailConfirmation" class="home-text29">
