--- a/index.html
+++ b/index.html
@@ -477,12 +477,12 @@
               </a>
             </div>
             <iframe
-              class="home-iframe" id="vimeoIframe1"
+              class="home-iframe" id="vimeoIframe1 allow="fullscreen"
             ></iframe>
           </div>
           <div class="learn-section-row">
             <iframe
-              class="home-iframe1" id="vimeoIframe2"
+              class="home-iframe1" id="vimeoIframe2 allow="fullscreen"
             ></iframe>
             <div class="home-text-block1">
               <h1 class="home-text47 Heading">
