--- a/legal-notice.html
+++ b/legal-notice.html
@@ -184,7 +184,7 @@
                 </span>
                 <span class="Content">
                   It is legally represented by the Rector, Univ.-Prof. Dr.-Ing.
-                  Wolfram Ressel
+                  Peter Middendorf.
                 </span>
               </span>
             </div>
