--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
                   </div>
                   <div class="menu-container5">
-                    <a href="#licenseSection" class="Content">
+                    <a href="#licenseSection" class="Content-M">
                       <span>License</span> 
                     </a>
                     <a
@@ -113,14 +113,14 @@
                       target="_blank"
                       rel="noreferrer noopener"
                     >
-                    <span>Download</span>
-                    <a href="#learnSection" class="Content">
+                    <span class="Content-M">Download</span>
+                    <a href="#learnSection" class="Content-M">
                       <span>Learn</span> 
                     </a>
-                    <a href="#contributorsSection" class="Content">
+                    <a href="#contributorsSection" class="Content-M">
                       <span>Team</span> 
                     </a>
-                    <a href="#faqSection" class="Content">
+                    <a href="#faqSection" class="Content-M">
                       <span>FAQ</span> 
                     </a>
                   </div>
@@ -346,7 +346,7 @@
             <div class="home-container10">
               <h1 class="home-text25 Heading">Email sent successfully!</h1>
               <span class="home-text26">
-                  A confirmation email containing your perosnal license key has
+                  A confirmation email contaiting your perosnal license key has
                   been sent to:
               </span>
               <span id="userMailConfirmation" class="home-text29">
@@ -477,12 +477,12 @@
               </a>
             </div>
             <iframe
-              class="home-iframe" id="vimeoIframe1 allow="fullscreen"
+              class="home-iframe" id="vimeoIframe1" allow="fullscreen"
             ></iframe>
           </div>
           <div class="learn-section-row">
             <iframe
-              class="home-iframe1" id="vimeoIframe2 allow="fullscreen"
+              class="home-iframe1" id="vimeoIframe2" allow="fullscreen"
             ></iframe>
             <div class="home-text-block1">
               <h1 class="home-text47 Heading">
@@ -574,6 +574,17 @@
                 <div class="home-container25">
                   <h1 class="home-text56 Content-L">Anni Dai</h1>
                   <span class="Content">M. Arch., B. Arch</span>
+                </div>
+              </div>
+              <div class="person-card">
+                <img
+                  alt="image"
+                  src="assets/contributors/Paule_Portrait.jpg"
+                  class="profile-pic"
+                />
+                <div class="home-container25">
+                  <h1 class="home-text56 Content-L">Robin Paule</h1>
+                  <span class="Content">Web Development</span>
                 </div>
               </div>
             </div>
@@ -710,7 +721,7 @@
                   Read the original paper on Opossum and its algorithm
                 </span>
                 <a
-                  href="https://www.researchgate.net/assetsation/315897724_Opossum_Introducing_and_Evaluating_a_Model-based_Optimization_Tool_for_Grasshopper"
+                  href="https://www.researchgate.net/publication/315897724_Opossum_Introducing_and_Evaluating_a_Model-based_Optimization_Tool_for_Grasshopper"
                   target="_blank"
                   rel="noreferrer noopener"
                   class="home-link7"
