--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
           </div>
           <div class="learn-section-row">
             <iframe
-              class="home-iframe1" id="vimeoIframe2" allow="fullscreen"
+              class="home-iframe" id="vimeoIframe2" allow="fullscreen"
             ></iframe>
             <div class="home-text-block1">
               <h1 class="home-text47 Heading">
