--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </a>
                 <div class="menu-nav">
                   <nav class="menu-nav1">
-                    <a href="#licenseSection" class="menu-text01">
+                    <a href="index.html#licenseSection" class="menu-text01">
                       <span>License</span>
                     </a>                   
                     <a
@@ -72,13 +72,13 @@
                     >
                       <span>Download</span>
                     </a>
-                    <a href="#learnSection" class="menu-text02">
+                    <a href="index.html#learnSection" class="menu-text02">
                       <span ><span>Learn</span></span>
                     </a>
-                    <a href="#contributorsSection" class="menu-text03">
+                    <a href="index.html#contributorsSection" class="menu-text03">
                       <span>Team</span>
                     </a>
-                    <a href="#faqSection" class="menu-text04">
+                    <a href="index.html#faqSection" class="menu-text04">
                       <span>FAQ</span>
                     </a>
                   </nav>
@@ -105,7 +105,7 @@
 
                   </div>
                   <div class="menu-container5">
-                    <a href="#licenseSection" class="Content-M">
+                    <a href="index.html#licenseSection" class="Content-M">
                       <span>License</span> 
                     </a>
                     <a
@@ -114,13 +114,13 @@
                       rel="noreferrer noopener"
                     >
                     <span class="Content-M">Download</span>
-                    <a href="#learnSection" class="Content-M">
+                    <a href="index.html#learnSection" class="Content-M">
                       <span>Learn</span> 
                     </a>
-                    <a href="#contributorsSection" class="Content-M">
+                    <a href="index.html#contributorsSection" class="Content-M">
                       <span>Team</span> 
                     </a>
-                    <a href="#faqSection" class="Content-M">
+                    <a href="index.html#faqSection" class="Content-M">
                       <span>FAQ</span> 
                     </a>
                   </div>
@@ -412,6 +412,16 @@
           </div>
         </div>
         <div class="home-arrow-two"></div>
+        <div class="home-latest-content-wrapper">
+          <div class="home-latest-content">
+            <span class="Content-L">
+              Heading?
+            </span>
+            <iframe 
+              class="home-iframe" id="videoContent1" allow="fullscreen">
+            </iframe>
+          </div>
+        </div>
         <div class="home-steps-wrapper">
           <div class="home-container16">
             <span class="home-text34 Heading">How to get started</span>
@@ -439,7 +449,7 @@
                   <br />
                   <br />
                   <a
-                    href="https://www.food4rhino.com/faq#users"
+                    href="https://www.food4rhino.com/en/faq?lang=en#users-install-grasshopper-plugin"
                     target="_blank"
                     rel="noreferrer noopener"
                     class="link"
