--- a/legal-notice.html
+++ b/legal-notice.html
@@ -68,7 +68,7 @@
           <div class="menu-header-wrapper">
             <header data-role="Header" class="menu-header">
               <div class="menu-container1">
-                <a href="index.html" class="menu-container2">
+                <a href="#headerSection" class="menu-container2">
                   <img
                     alt="image"
                     src="assets/logos/opossumlogo256-1500h.ico"
@@ -78,7 +78,7 @@
                 </a>
                 <div class="menu-nav">
                   <nav class="menu-nav1">
-                    <a href="./index.html#licenseSection" class="menu-text01">
+                    <a href="index.html#licenseSection" class="menu-text01">
                       <span>License</span>
                     </a>                   
                     <a
@@ -89,13 +89,13 @@
                     >
                       <span>Download</span>
                     </a>
-                    <a href="./index.html#learnSection" class="menu-text02">
+                    <a href="index.html#learnSection" class="menu-text02">
                       <span ><span>Learn</span></span>
                     </a>
-                    <a href="./index.html#contributorsSection" class="menu-text03">
+                    <a href="index.html#contributorsSection" class="menu-text03">
                       <span>Team</span>
                     </a>
-                    <a href="./index.html#faqSection" class="menu-text04">
+                    <a href="index.html#faqSection" class="menu-text04">
                       <span>FAQ</span>
                     </a>
                   </nav>
@@ -122,11 +122,24 @@
 
                   </div>
                   <div class="menu-container5">
-                    <span class="Content"><span>License</span></span>
-                    <span class="Content"><span>Download</span></span>
-                    <span class="Content"><span>Learn</span></span>
-                    <span class="Content"><span>Team</span></span>
-                    <span class="Content"><span>FAQ</span></span>
+                    <a href="index.html#licenseSection" class="Content-M">
+                      <span>License</span> 
+                    </a>
+                    <a
+                      href="https://www.food4rhino.com/en/app/opossum-optimization-solver-surrogate-models"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                    <span class="Content-M">Download</span>
+                    <a href="index.html#learnSection" class="Content-M">
+                      <span>Learn</span> 
+                    </a>
+                    <a href="index.html#contributorsSection" class="Content-M">
+                      <span>Team</span> 
+                    </a>
+                    <a href="index.html#faqSection" class="Content-M">
+                      <span>FAQ</span> 
+                    </a>
                   </div>
                 </div>
               </div>
@@ -183,7 +196,7 @@
                   The University of Stuttgart is a public sector entity.
                 </span>
                 <span class="Content">
-                  It is legally represented by the Rector, Univ.-Prof. Dr.-Ing.
+                  It is legally represented by the Rector, Prof. Dr.-Ing.
                   Peter Middendorf.
                 </span>
               </span>
