Webinar title change

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <div class="home-latest-content-wrapper">
           <div class="home-latest-content">
             <span class="Content-L">
-              Heading?
+              The latest food4rhino webinar:
             </span>
             <iframe 
               class="home-iframe" id="videoContent1" allow="fullscreen">
